--- a/WebContent/practice02.html
+++ b/WebContent/practice02.html
@@ -6,5 +6,6 @@
 </head>
 <body>	
 	<h3>웹표준 페이지2 입니당!!</h3>
+	<a target="_blank" href="http://imageshack.com/f/f0dBuM80j"><img src="http://imagizer.imageshack.us/v2/150x100q90/540/dBuM80.jpg" border="0"></a>
 </body>
 </html>
