--- a/WebContent/practice03.html
+++ b/WebContent/practice03.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>웹표준 페이지3</title>
-<link rel="stylesheet" type="text/css" href="style2.css">
+<link rel="stylesheet" type="text/css" href="css/style2.css">
 </head>
 <body>
 	<div class="box2">박스2</div>
+	<div class="clear"></div>
 	<div class="box3">박스3</div>
 	<div class="box4">박스4</div>
 </body>
